# lam_usfft

./: .gitignore  README.md  README.rst  setup.py
experimental/: rec_chawla.py
src/cuda/: CMakeLists.txt  copy3d.cu  copy3d.i  fft.cu  fft.i  fft2d.cu  fft2d.i  kernels1d.cu  kernels2d.cu  kernels_fft2d.cu  kernels_usfft1d.cu  kernels_usfft2d.cu  shift.cu  usfft1d.cu  usfft1d.i  usfft2d copy.i  usfft2d.cu  usfft2d.i
src/ffttests/: __init__.py  fftcl.py  utils.py
src/include/: fft.cuh  fft2d.cuh  usfft1d.cuh  usfft2d.cuh
src/lam_usfft/: __init__.py  chunking.py  cuda_kernels.py  extra_terms.py  fft2d.py  fftcl.py  lam.py  logger_config.py  rec.py  remove_stripe.py  usfft1d.py  usfft2d.py  utils.py
tests/: logging  read_raw.py  test.py  test1d.py  test2d.py  test_adjoint.py  test_adjoint_reg.py  test_admm.py  test_admm_brain.py  test_admm_eiffel.py  test_bh.py  test_bicycle.py  test_cg.py  test_cg_brain.py  test_chip.py  test_chip_batch.py  test_chip_compression.py  test_eiffel.py  test_norm.py  test_norm_reg.py  test_perf.py  test_reg.py
tests/brain/: bin_data.py  logging  run.sh  test_admm.py  test_admm_cropped.py  time1501_1616_fourierrec.npy
tests/res/: data.tiff
